# Roughness

./: CMakeLists.txt  README.md  Roughness.h  Roughness_Items.h  all.txt  color.cpp  color.sh  extract_Vpropres.cpp  extract_Vpropres.h  main.cpp  main.m  main_table.m  normal_cycle.h  plot_stats.m  polyhedron_enrichment_define.h  print_table.m  process.sh  process_all.sh  roughness_params.m  roughness_stats.m  roughness_table.m
Polyhedron/: Polyhedron_OBJ_CGALImporter.h  polyhedron.h  polyhedron_enriched_polyhedron.h  polyhedron_shared_items.h
